--- a/client/src/UIElements/Card.css
+++ b/client/src/UIElements/Card.css
@@ -1,10 +1,26 @@
-
 .card {
-    position: relative;
-    margin: 0;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-    border-radius: 6px;
-    padding: 1rem;
-    overflow: hidden;
-    background: white;
-  }
+  position: relative;
+  margin: 0;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 6px;
+  padding: 1rem;
+  overflow: hidden;
+  background: white;
+}
+
+.BusinessCard {
+  position: relative;
+  margin: 2rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 6px;
+  padding: 1rem;
+  overflow: hidden;
+  background: white;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.BusinessCard:hover {
+  opacity: .5;
+}
