--- a/client/src/UIElements/Card.css
+++ b/client/src/UIElements/Card.css
@@ -16,11 +16,15 @@
   padding: 1rem;
   overflow: hidden;
   background: white;
-  width: 1000px;
+  /* width: 1000px; */
+  max-width: 75%;
   margin-left: auto;
   margin-right: auto;
 }
+div.card:nth-child(1) {
+  margin-top: 0;
+}
 
 .BusinessCard:hover {
-  opacity: .5;
+  opacity: 0.5;
 }
