adding home/navbar

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,7 +1,3 @@
-/* .container.home {
-  background-image: url('./assets/images.pinkcrop.jpg');
-  background-size: cover;
-} */
 .home {
   margin-top: 75px;
   background-size: cover;
@@ -9,4 +5,5 @@
   height: 100%;
   width: 100%;
   background-position-y: bottom;
+  grid-column: 1 / span-1;
 }
