--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,10 +10,14 @@ body {
 
 .container {
   position: fixed;
+  grid-column-gap: 39px;
   height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  max-width: 1206;
+  margin-right: auto;
+  margin-left: auto;
+  display: grid;
+  grid-template-columns: repeat(15, 1fr);
 }
 .navbar {
   display: flex;
