--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,9 @@ body {
   padding: 0;
   overscroll-behavior: none;
 }
+html {
+  font-size: 62.5%;
+}
 
 .container {
   font-family: 'Roboto', sans-serif;
@@ -14,7 +17,6 @@ body {
   position: fixed;
   height: 100vh;
   width: 100%;
-  max-width: 1206;
   display: flex;
 }
 .navbar {
@@ -37,7 +39,7 @@ ul {
 
 li {
   display: inline-block;
-  margin: 0 40px;
+  margin: 0 4rem;
 }
 a {
   text-decoration: none;
@@ -50,20 +52,20 @@ a.active {
   font-weight: 400;
 }
 h1 {
-  font-size: 36pt;
+  font-size: 3.6rem;
   font-weight: 100;
 }
 h3 {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 300;
 }
 h4 {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 300;
   padding-top: 10px;
 }
 h5 {
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 19px;
   font-weight: 300;
 }
@@ -76,11 +78,11 @@ h5 {
   border: 1 px solid #f32dc8;
   color: white;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
 }
 p {
-  font-size: 14px;
+  font-size: 1.4rem;
   line-height: 17px;
   font-weight: 400;
 }
