--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,7 @@ h5 {
   font-weight: 300;
   padding-top: 10px;
   margin: 0 15px;
+  cursor: pointer;
 }
 .btn--btn-primary.twoLines {
   padding-top: 5px;
