--- a/client/src/pages/Auth/UserRegistration.css
+++ b/client/src/pages/Auth/UserRegistration.css
@@ -1,4 +1,81 @@
-.signup {
+/* provisorio */
+.FeatureContainer_image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  width: 100%;
+}
+.FeatureContainer {
+  display: grid;
+  grid-template-columns: repeat(14, 1fr);
+  grid-column-gap: 35px;
+  height: 100vh;
+  width: 100vw;
+  max-width: 1206px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* deletar */
+
+
+.FeatureContainer_image.UserRegistration {
+  background-image: url('../../assets/images/hairpink.jpg');
+}
+
+.UserRegistration_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  position: absolute;
+  width: 386px;
+  height: 474px;
+  left: 527px;
+  top: 188px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.UserRegistration_inputGroup{
+position:static;
+width: 386px;
+height: 365px;
+left: 0px;
+top: 0px;
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 23px 0px;
+}
+
+.UserRegistration_radioButton {
+position: static;
+width: 181px;
+height: 21px;
+left: 0px;
+top: 388px;
+flex: none; 
+order: 1;
+flex-grow: 0;
+margin: 23px 0px;
+}
+
+.UserRegistration_input {
+  height: 36px;
+  width: 80%;
+  background: none;
+  border: 0.5px solid black;
+  margin-top: -40px;
+  text-align: center;
+  font-size: 1.6em;
+  font-weight: 100;
+}
+
+.UserRegistration_input:focus {
+  outline: none;
+}
+
+/* .signup {
     display: grid;
     grid-template-columns: repeat(15, 1fr);
     background-size: cover;
@@ -14,8 +91,9 @@
   }
   .input-group {
     text-align: center;
-    margin-top: 300px;
+    margin-top: 100px !important;
     grid-column: 6/11;
+    background-color: #F0E4E6;
   }
   input {
     height: 36px;
@@ -32,4 +110,15 @@
   input:focus {
     outline: none;
   }
-  
+
+
+label{
+  display: inline;
+}
+
+input[type=radio],
+input.radio{
+  display: inline;
+  width: auto;
+  margin: 2px 0 0 2px;
+} */
