--- a/client/src/components/FilterServicesAndFeatures/FilterServicesAndFeatures.css
+++ b/client/src/components/FilterServicesAndFeatures/FilterServicesAndFeatures.css
@@ -1,8 +1,10 @@
 .Filters-Container {
   display: flex;
   flex-direction: column;
-  justify-self: center;
+  /* justify-self: center; */
+  height: 38rem;
   margin: 12px;
+  margin-right: 12px;
 }
 .Filters-Label_header {
   display: flex;
@@ -10,19 +12,32 @@
   font-weight: 500;
 }
 .Filters-Label_header_services {
-  margin-top: 2.3rem;
+  margin-top: 1rem;
+}
+.Filters-FormGroup {
+  max-height: 35%;
+  overflow: scroll;
+  /* scroll-behavior: auto; */
+  margin: 1rem 0 0 0;
 }
 .Filters-FormCheck {
   text-transform: capitalize;
+  margin: 10px;
 }
 .Filters-FormCheckInput {
-}
-.Filters-FormCheck {
-  margin: 10px;
 }
 .Filters-FormCheckLabel {
   font-weight: 300;
 }
 .Filters-Button {
-  margin-top: 1rem;
+  width: 116px;
+  height: 42px;
+  /* margin: 2rem 0 0 1.5rem; */
+  margin: 2rem 0 0 1.55rem;
+  /* margin-top: 1rem; */
+  background: black;
+  border-radius: 10px;
+  border: 1px solid #f32dc8;
+  color: white;
+  text-align: center;
 }
