--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -1,15 +1,23 @@
-.BusinessList-Wrapper {
+.BusinessList {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100vh;
   align-items: center;
-  margin-top: -10vh; /* Adds overlap styles to navbar */
+  /* Adds overlap styles to navbar */
+  margin-top: -10vh;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: bottom center;
   background-image: url(../../assets//images/whitecrop\ 1.png);
+  /* position: fixed; */
+}
+.BusinessList-Wrapper {
 }
 .BusinessList-Wrapper_loader {
+  display: flex;
+  justify-content: center;
+
   margin-top: 4rem;
   justify-items: center;
 }
@@ -18,9 +26,11 @@
   display: flex;
   flex-direction: column;
   height: 20vh;
+  text-align: center;
   font-size: 21px;
 }
 .BusinessList-Header {
+  margin-bottom: 0.5rem;
   font-size: 21px;
   font-weight: 400;
 }
@@ -34,21 +44,39 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 12rem;
-  height: max-content;
+  /* width: 12rem; */
+  width: 13rem;
+  height: 38rem;
   margin-right: 34px;
-  padding: 2rem 0 2.5rem 0;
+  /* Not sure? below */
+  /* margin-right: -2px;  */
+  padding: 2rem 0 0 0;
   border: 0.25px solid rgba(0, 0, 0, 1);
 }
+.BusinessList-CardContainer {
+  height: 38rem;
+  width: 37.25rem;
+  overflow: auto;
+  scroll-behavior: auto;
+  /* border: 0.25px solid rgba(0, 0, 0, 1); */
+}
 .BusinessList-Card {
-  width: 36.93rem;
+  /* width: 37.25rem; */
+  width: 100%;
   position: relative;
-  margin: 2rem;
+  /* margin: 2rem; */
   padding: 1rem;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  margin: 0 35px 0 auto !important;
+  /* margin-right: 35px; */
+  /* margin-bottom: 0 !important; */
+  /* margin-top: 0 !important; */
   overflow: hidden;
-  border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  /* border-radius: 6px; */
+  border-radius: 0px;
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26); */
+  box-shadow: none;
+  border: 0.25px solid rgba(0, 0, 0, 0.7);
   background: #f7f7f7 !important;
 }
