--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -4,37 +4,32 @@
   width: 100%;
   height: 100vh;
   align-items: center;
-  /* Adds overlap styles to navbar */
+  /* Below adds overlap styles to navbar */
   margin-top: -10vh;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: bottom center;
   background-image: url(../../assets//images/whitecrop\ 1.png);
-  /* position: fixed; */
-}
-.BusinessList-Wrapper {
 }
 .BusinessList-Wrapper_loader {
   display: flex;
   justify-content: center;
-
-  margin-top: 4rem;
   justify-items: center;
+  margin-top: 4rem;
 }
 .BusinessList-HeaderContainer {
   justify-content: flex-end;
   display: flex;
   flex-direction: column;
-  height: 20vh;
+  height: 10.68rem;
   text-align: center;
-  font-size: 21px;
+  font-size: 1.313rem;
 }
 .BusinessList-Header {
   margin-bottom: 0.5rem;
-  font-size: 21px;
+  font-size: 1.313rem;
   font-weight: 400;
 }
-
 .BusinessList-Container {
   display: flex;
   width: 100%;
@@ -44,38 +39,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* width: 12rem; */
   width: 13rem;
   height: 38rem;
-  margin-right: 34px;
-  /* Not sure? below */
-  /* margin-right: -2px;  */
+  margin-right: 2.125em;
   padding: 2rem 0 0 0;
   border: 0.25px solid rgba(0, 0, 0, 1);
 }
 .BusinessList-CardContainer {
   height: 38rem;
   width: 37.25rem;
-  overflow: auto;
-  scroll-behavior: auto;
-  /* border: 0.25px solid rgba(0, 0, 0, 1); */
+  overflow: scroll;
 }
 .BusinessList-Card {
-  /* width: 37.25rem; */
   width: 100%;
   position: relative;
-  /* margin: 2rem; */
   padding: 1rem;
-  /* margin-left: auto; */
-  /* margin-right: auto; */
   margin: 0 35px 0 auto !important;
-  /* margin-right: 35px; */
-  /* margin-bottom: 0 !important; */
-  /* margin-top: 0 !important; */
   overflow: hidden;
-  /* border-radius: 6px; */
   border-radius: 0px;
-  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26); */
   box-shadow: none;
   border: 0.25px solid rgba(0, 0, 0, 0.7);
   background: #f7f7f7 !important;
