--- a/client/src/components/NavbarMobile.css
+++ b/client/src/components/NavbarMobile.css
@@ -7,32 +7,13 @@
   align-items: center;
 }
 
-/* .menu {
-  display: flex;
-} */
-
-/* .menu a {
-  color: rgb(250, 250, 250);
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 0 10px;
-} */
-
-.show-menu-btn,
-.hide-menu-btn {
+.show-menu-btn {
   transition: 0.4s;
   font-size: 30px;
   cursor: pointer;
   user-select: none;
   display: none;
-}
-
-.show-menu-btn {
-  margin-left: auto;
-}
-
-.show-menu-btn i {
-  line-height: 100px;
+  margin-left: 40px;
 }
 
 .menu a:hover,
@@ -52,33 +33,31 @@
   .hide-menu-btn {
     display: block;
   }
-  .Navbar_logo {
-    margin-left: 40px;
+  li.NavbarList_link {
+    display: block;
+    margin: 0 2rem;
   }
+
   .menu {
     display: block;
     position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: rgb(39, 16, 16);
+    width: 80%;
+    height: 80%;
+    background: snow;
     right: -100%;
-    top: 0;
-    text-align: center;
+    top: 14%;
+    text-align: left;
     padding: 80px 0;
     line-height: normal;
     transition: 0.7s;
     z-index: 3;
+    margin-right: 10%;
   }
   .menu a {
     display: block;
     padding: 20px;
   }
 
-  .hide-menu-btn {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-  }
   #chk:checked ~ .menu {
     right: 0;
   }
