--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,22 +1,42 @@
-.header {
-  height: 100px;
-  background: rgb(39, 16, 16);
-  padding: 0 20px;
-  color: rgb(250, 250, 250);
+.Navbar {
   display: flex;
-  align-items: center;
+  width: 100%;
+  position: fixed;
+  height: 100px;
+  background: none;
+  top: 0;
+  z-index: 10;
+  border-bottom: 0.5px solid black;
+  justify-content: space-around;
+}
+h4.Navbar_logo {
+  padding-top: 20px;
+}
+ul.NavbarList {
+  list-style-type: none;
+  padding: 0;
 }
 
-.show-menu-btn {
-  transition: 0.4s;
-  cursor: pointer;
-  display: none;
+li.NavbarList_link {
+  display: inline-block;
+  margin: 0 4rem;
 }
-
-.menu a:hover {
+.NavbarList_link a {
+  text-decoration: none;
+  color: black;
+}
+.NavbarList_link a:hover {
+  font-weight: 400;
   text-decoration: none;
   border-bottom: 1px solid #f32dc8;
   padding-bottom: 3px;
+}
+.NavbarList_link a:focus {
+  font-weight: 400;
+}
+
+.show-menu-btn {
+  display: none;
 }
 
 #chk {
