update mobile bk images in home, login, signup

--- a/client/src/pages/Auth/Login/Login.css
+++ b/client/src/pages/Auth/Login/Login.css
@@ -41,4 +41,7 @@
   .Login_inputGroup {
     margin-top: 120px;
   }
+  .FeatureContainer_image.Login {
+    background-image: url('../../../assets/images/hairwhite-mobile.jpg');
+  }
 }
