--- a/client/src/pages/AddBusiness/AddBusiness.css
+++ b/client/src/pages/AddBusiness/AddBusiness.css
@@ -33,6 +33,30 @@
   overflow: scroll;
   font-weight: 300;
 }
+.AddBusiness-FormCard_preview_container {
+  align-items: center;
+}
+.AddBusiness-FormCard_image_preview {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  align-items: center;
+}
+.AddBusiness-FormCard_image_preview img {
+  margin-bottom: 0.608rem;
+}
+.AddBusiness-FormCard_image_btn {
+  /* width: 100px; */
+  /* height: 30px;
+  border-radius: 10px; */
+  width: 9em;
+  height: 2.5rem;
+  text-align: center;
+  background: black;
+  border-radius: 0.625rem;
+  border: 1px solid #f32dc8;
+  color: white;
+}
 .AddBusiness-FormCard_body input,
 textarea,
 select {
