Fix: CSS resize merge correction

--- a/client/src/pages/AddBusiness/AddBusiness.css
+++ b/client/src/pages/AddBusiness/AddBusiness.css
@@ -122,8 +122,8 @@ textarea::placeholder {
   align-items: flex-end;
 }
 .AddBusiness-FormCard_sidebar_btn {
-  width: 116px;
-  height: 42px;
+  width: 11.6rem;
+  height: 4.2rem;
   text-align: center;
   background: black;
   border-radius: 10px;
