--- a/client/src/pages/AddBusiness/AddBusiness.css
+++ b/client/src/pages/AddBusiness/AddBusiness.css
@@ -46,7 +46,8 @@
   margin-bottom: 0.608rem;
 }
 .AddBusiness-FormCard_image_btn {
-  width: 9em;
+  /* width: 9em; */
+  width: 13rem !important;
   height: 2.5rem;
   text-align: center;
   background: black;
@@ -63,11 +64,18 @@ select {
   border: 0.5px solid black;
   background: none;
 }
+.AddBusiness-FormCard_body_formGroup input,
+textarea,
+select,
+button {
+  font-family: 'Roboto', sans-serif !important;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
 .AddBusiness-FormCard_body input::placeholder,
 textarea::placeholder {
   color: rgba(0, 0, 0, 0);
 }
-
 .AddBusiness-FormCard_body_columns {
   display: flex;
   justify-content: space-between;
@@ -101,12 +109,15 @@ textarea::placeholder {
   font-weight: 500;
 }
 .AddBusiness-FormCard_filtersContainer_formGroup {
-  max-height: 35%;
+  max-height: 36%;
   margin: 12px;
   overflow: scroll;
 }
 .AddBusiness-FormCard_filtersContainer_labelHeader_services {
-  margin-top: 3.45rem;
+  margin-top: 2.45rem;
+}
+div.AddBusiness-FormCard_filtersContainer_formGroup:nth-child(4) {
+  padding-top: 1px;
 }
 .AddBusiness-FormCard_filtersContainer_formCheck {
   margin-bottom: 0.608rem;
